--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
    <b>You can visit the website via clicking on Website Photos.</b> The page will be updated as I learn new things during the process. 
 </p>
 <ol>
-   <h2><li>Favourtie Movies</li></h2> 
+   <h2><li> <a href="./4.3 HTML Porfolio Project/public/Movie Ranking.html">Favourtie Movies</a></li></h2> 
    <a href="./4.3 HTML Porfolio Project/public/Movie Ranking.html"><img src="./4.3 HTML Porfolio Project/public/Images/Movie Ranking.png" alt="Click to see the Website" height="300"></a> 
 <hr>
-    <h2><li>Birthday Invite</li></h2>
+    <h2><li> <a href="./4.3 HTML Porfolio Project/public/BirthdayInvite.html">Birthday Invite</a></li></h2>
     <a href="./4.3 HTML Porfolio Project/public/BirthdayInvite.html"><img src="./4.3 HTML Porfolio Project/public/Images/Birthday.png" alt="Click to see the Website" height="300"></a>
 </ol> 
 <hr />
