--- a/4.3 HTML Porfolio Project/public/BirthdayInvite.html
+++ b/4.3 HTML Porfolio Project/public/BirthdayInvite.html
@@ -9,7 +9,7 @@
    <b><u><h1>Happy Birthday to The Legend Mr.Arijit Singh</h1></u> </b>
 <h2 ><b>On the 25th Of April, 2024.</b></h2>
 <img src="./Arijit.jpg" height="300" />
-<b><p> Join the Celebration! Arijit's Birthday Bash <br></b>
+<b><p> <h3>Join the Celebration! Arijit's Birthday Bash </h3></b>
 
     Hey guys,<br>
     
