--- a/4.3 HTML Porfolio Project/public/Movie Ranking.html
+++ b/4.3 HTML Porfolio Project/public/Movie Ranking.html
@@ -10,13 +10,14 @@
 <ol>
     <li><h3>Harry Potter Series</h3></li>
 It takes me away from all the problems of life for few hours relaxes and excites me alot.<br/>
-<li><h3>Ye Jawani Hai Dewani</h3></li>
-Its story and the beautiful music attracts me to watch this movie again and again.<br />
+<li><h3>Animal</h3></li>
+GOAT<br />
 <li><h3>Ae dil hai Mushkil</h3></li>
 Again same reason as previous one,<br /> Its story and the beautiful music attracts me to watch this movie again and again.<br />
 </ol>
 <h2>More movies that everyone should watch before the end of Humann Species. </h2>
 <ul>
+    <li><h3>Ye Jawani Hai Dewani</h3></li>
     <li><h3>Kingsman Series</h3></li>
     <li><h3>John Wick Series</h3></li>
     <li><h3>3 Idiots</h3></li>
