--- a/4.3 HTML Porfolio Project/public/Movie Ranking.html
+++ b/4.3 HTML Porfolio Project/public/Movie Ranking.html
@@ -12,8 +12,8 @@
 It takes me away from all the problems of life for few hours relaxes and excites me alot.<br/>
 <li><h3>Animal</h3></li>
 GOAT<br />
-<li><h3>Ae dil hai Mushkil</h3></li>
-Again same reason as previous one,<br /> Its story and the beautiful music attracts me to watch this movie again and again.<br />
+<li><h3>Ae dil hai Mushkil</h3></li><br /> 
+Its story and the beautiful music attracts me to watch this movie again and again.<br />
 </ol>
 <h2>More movies that everyone should watch before the end of Humann Species. </h2>
 <ul>
